watch/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeName: nereid-1
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr:release
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8989
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 80
      targetPort: http
